--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "background": {
-    "page": "background.html"
+    "service_worker": "js/background.js",
+    "type": "module"
   },
   "content_scripts": [
     {
@@ -16,11 +17,22 @@
     "16": "img/icon16.png",
     "48": "img/icon48.png"
   },
-  "web_accessible_resources": [
-    "/font/fontawesome-webfont.tff",
-    "/font/fontawesome-webfont.woff"
-  ],
+  "web_accessible_resources": [{
+    "resources": [
+      "/font/fontawesome-webfont.tff",
+      "/font/fontawesome-webfont.woff"
+    ],
+    "matches": ["http://*/*", "https://*/*"]
+  }],
   "name": "Show Title Tag",
-  "update_url": "http://clients2.google.com/service/update2/crx",
-  "version": "2.3"
+  "action": {
+    "default_icon": {
+      "16": "img/icon16.png",
+      "48": "img/icon48.png",
+      "128": "img/icon128.png"
+    }
+  },
+  "permissions": [],
+  "host_permissions": ["http://*/*", "https://*/*"],
+  "version": "3.0"
 }
